Using .valueOf instead of constructor for better performance